--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java-library'
+    id 'maven-publish'
+    id 'maven'
 }
 
 group 'io.unmock'
@@ -12,6 +14,34 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+test {
+    environment "UNMOCK_TOKEN", unmockToken
+    environment "UNMOCK_HOST", unmockHost
+    environment "UNMOCK_PORT", unmockPort
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "cloudsmith"
+            url = "https://maven.cloudsmith.io/unmock/unmock-java-core/"
+            def releasesRepoUrl = "https://maven.cloudsmith.io/unmock/unmock-java-core/"
+            def snapshotsRepoUrl = "https://maven.cloudsmith.io/unmock/unmock-java-core/"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+            credentials {
+                username = 'token'
+                password = cloudsmithApiKey
+            }
+        }
+    }
+    publications {
+        maven(MavenPublication) {
+            // [snip]]
+        }
+    }
 }
