--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java-library'
-    id 'maven-publish'
     id 'maven'
 }
 
@@ -13,9 +12,14 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    deployerJars
+}
+
 dependencies {
     compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    deployerJars group: 'io.packagecloud.maven.wagon', name: 'maven-packagecloud-wagon', version: '0.0.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -25,23 +29,11 @@ test {
     environment "UNMOCK_PORT", unmockPort
 }
 
-publishing {
-    repositories {
-        maven {
-            name = "cloudsmith"
-            url = "https://maven.cloudsmith.io/unmock/unmock-java-core/"
-            def releasesRepoUrl = "https://maven.cloudsmith.io/unmock/unmock-java-core/"
-            def snapshotsRepoUrl = "https://maven.cloudsmith.io/unmock/unmock-java-core/"
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-            credentials {
-                username = 'token'
-                password = cloudsmithApiKey
-            }
-        }
-    }
-    publications {
-        maven(MavenPublication) {
-            // [snip]]
+uploadArchives {
+    repositories.mavenDeployer {
+        configuration = configurations.deployerJars
+        repository(url: "packagecloud+https://packagecloud.io/mikesol/unmock-java-core") {
+            authentication(password: mavenPassword)
         }
     }
 }
