--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,33 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
+    }
+}
+
 plugins {
     id 'java-library'
     id 'maven'
 }
+
+apply plugin: 'com.bmuschko.nexus'
 
 group 'io.unmock'
 version '0.0.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
+
 repositories {
     mavenCentral()
-}
-
-configurations {
-    deployerJars
+    jcenter()
 }
 
 dependencies {
     compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    deployerJars group: 'io.packagecloud.maven.wagon', name: 'maven-packagecloud-wagon', version: '0.0.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -27,13 +35,4 @@ test {
     environment "UNMOCK_TOKEN", unmockToken
     environment "UNMOCK_HOST", unmockHost
     environment "UNMOCK_PORT", unmockPort
-}
-
-uploadArchives {
-    repositories.mavenDeployer {
-        configuration = configurations.deployerJars
-        repository(url: "packagecloud+https://packagecloud.io/mikesol/unmock-java-core") {
-            authentication(password: mavenPassword)
-        }
-    }
 }
