--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ plugins {
 apply plugin: 'com.bmuschko.nexus'
 
 group 'io.unmock'
-version '0.0.0-SNAPSHOT'
+version '0.0.0'
 
 sourceCompatibility = 1.8
 
